--- a/inspectit-ocelot-config/src/main/resources/rocks/inspectit/ocelot/config/default/system-and-jvm-metrics.yml
+++ b/inspectit-ocelot-config/src/main/resources/rocks/inspectit/ocelot/config/default/system-and-jvm-metrics.yml
@@ -81,7 +81,7 @@ inspectit:
     concurrent:
       enabled:
         # if true, it is possible to record concurrent invocations within rules
-        # concurrent invocations will not be recorded automatically!
+        # concurrent invocations will not be recorded automatically but only when enabled within rules!
         invocations: false
       # specifies the frequency with which the concurrent invocations metrics should be polled and recorded
       frequency: ${inspectit.metrics.frequency}
