--- a/inspectit-ocelot-config/src/main/resources/rocks/inspectit/ocelot/config/default/instrumentation/core.yml
+++ b/inspectit-ocelot-config/src/main/resources/rocks/inspectit/ocelot/config/default/instrumentation/core.yml
@@ -50,3 +50,13 @@ inspectit:
       # used for storing session ids, which are used for browser-propagation
       remote_session_id:
         down-propagation: JVM_LOCAL
+
+    # defines the behaviour of how data can be stored for sessions
+    sessions:
+      # HTTP-header, which will be used to determine the session
+      session-id-header: "Session-Id"
+      # how many sessions can be stored at the same time
+      # Additional limitations: key-length -> 128, value-length -> 2048, attribute-count -> 128
+      session-limit: 100
+      # how long the data should be stored
+      time-to-live: 5m
