refactor default actions

--- a/inspectit-ocelot-agent/src/system-test/resources/config/InspectitRegexTest.yml
+++ b/inspectit-ocelot-agent/src/system-test/resources/config/InspectitRegexTest.yml
@@ -19,7 +19,7 @@ inspectit:
       InspectitRegexTest-matches:
         input:
           _regex: InspectitRegex
-        value: _regex.matches("\\d+", "12345")
+        value: Boolean.valueOf(_regex.matches("\\d+", "12345"))
 
     rules:
       InspectitRegexTest:
