Closes #246 - Add regex cache for actions (#1796)
* add regex cache

* add system test

* rename reflection and regex type

* refactor default actions

* add matcher() method

* update docs

* add bean name

--- a/inspectit-ocelot-config/src/main/resources/rocks/inspectit/ocelot/config/default/instrumentation/actions/_shared/regex.yml
+++ b/inspectit-ocelot-config/src/main/resources/rocks/inspectit/ocelot/config/default/instrumentation/actions/_shared/regex.yml
@@ -82,12 +82,12 @@ inspectit:
           'string': 'String'
           'pattern': 'String'
           'replacement': 'String'
+          '_regex': 'InspectitRegex'
         value-body: |
           if (string == null) {
             return null;
           }
-          Pattern regex = Pattern.compile(pattern);
-          Matcher m = regex.matcher(string);
+          Matcher m = _regex.matcher(pattern, string);
           if (m.matches()) {
             StringBuffer result = new StringBuffer();
             m.appendReplacement(result, replacement);
@@ -122,6 +122,7 @@ inspectit:
         input:
           'string': 'String'
           'patterns_and_replacements': 'Map'
+          '_regex': 'InspectitRegex'
         value-body: |
           if (string == null) {
             return null;
@@ -131,8 +132,7 @@ inspectit:
             Map patAndRepl = (Map) patterns_and_replacements.get(String.valueOf(i));
             String pattern = (String) patAndRepl.get("pattern");
             String replacement = Objects.toString(patAndRepl.get("replacement"));
-            Pattern regex = Pattern.compile(pattern);
-            Matcher m = regex.matcher(result);
+            Matcher m = _regex.matcher(pattern, result);
             if (m.matches()) {
               StringBuffer sb = new StringBuffer();
               m.appendReplacement(sb, replacement);
@@ -159,12 +159,12 @@ inspectit:
           'string': 'String'
           'pattern': 'String'
           'replacement': 'String'
+          '_regex': 'InspectitRegex'
         value-body: |
           if (string == null) {
             return null;
           }
-          Pattern regex = Pattern.compile(pattern);
-          Matcher m = regex.matcher(string);
+          Matcher m = _regex.matcher(pattern, string);
           if (m.matches()) {
             return m.replaceFirst(replacement);
           }
@@ -197,12 +197,12 @@ inspectit:
           'string': 'String'
           'pattern': 'String'
           'result': 'Object'
+          '_regex': 'InspectitRegex'
         value-body: |
           if (string == null) {
             return null;
           }
-          Pattern regex = Pattern.compile(pattern);
-          Matcher m = regex.matcher(string);
+          Matcher m = _regex.matcher(pattern, string);
           if (m.matches()) {
             if (result instanceof String) {
               StringBuffer sb = new StringBuffer();
@@ -250,6 +250,7 @@ inspectit:
         input:
           'string': 'String'
           'patterns_and_results': 'Map'
+          '_regex': 'InspectitRegex'
         value-body: |
           if (string == null) {
             return null;
@@ -258,8 +259,7 @@ inspectit:
             Map patAndRepl = (Map) patterns_and_results.get(String.valueOf(i));
             String pattern = (String) patAndRepl.get("pattern");
             Object result = patAndRepl.get("result");
-            Pattern regex = Pattern.compile(pattern);
-            Matcher m = regex.matcher(string);
+            Matcher m = _regex.matcher(pattern, string);
             if (m.matches()) {
               if (result instanceof String) {
                 StringBuffer sb = new StringBuffer();
@@ -299,12 +299,12 @@ inspectit:
           'string': 'String'
           'pattern': 'String'
           'result': 'Object'
+          '_regex': 'InspectitRegex'
         value: |
           if(string == null) {
             return null;
           }
-          Pattern regex = Pattern.compile(pattern);
-          Matcher m = regex.matcher(string);
+          Matcher m = _regex.matcher(pattern, string);
           if (m.find()) {
             if(result instanceof String) {
               StringBuffer sb = new StringBuffer();
@@ -351,6 +351,7 @@ inspectit:
         input:
           'string': 'String'
           'patterns_and_results': 'Map'
+          '_regex': 'InspectitRegex'
         value-body: |
           if (string == null) {
             return null;
@@ -359,8 +360,7 @@ inspectit:
             Map patAndRepl = (Map) patterns_and_results.get(String.valueOf(i));
             String pattern = (String) patAndRepl.get("pattern");
             Object result = patAndRepl.get("result");
-            Pattern regex = Pattern.compile(pattern);
-            Matcher m = regex.matcher(string);
+            Matcher m = _regex.matcher(pattern, string);
             if (m.find()) {
               if (result instanceof String) {
                 StringBuffer sb = new StringBuffer();
