--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -33,6 +33,8 @@ jobs:
           cp ./components/inspectit-ocelot-configurationserver/build/reports/bom.json ./boms/inspectit-ocelot-configurationserver-bom.json
           cp ./components/inspectit-ocelot-configurationserver/build/reports/bom.xml ./boms/inspectit-ocelot-configurationserver-bom.xml
           zip -r ./artifacts/software-bill-of-materials.zip ./boms
+      - name: Prepare docker artifacts
+        run: ./gradlew :inspectit-ocelot-agent:copyAgentJar :inspectit-ocelot-configurationserver:copyServerJar
       - name: Calculate checksums of release artifacts
         working-directory: ./artifacts
         run: for f in *; do sha256sum "$f" >> inspectit-ocelot-sha256-checksums.txt; done
@@ -71,23 +73,33 @@ jobs:
     environment: release
     steps:
       - name: Checkout
-        uses: actions/checkout@v3
-      - name: Setup Java
-        uses: actions/setup-java@v3
+        uses: actions/checkout@v4
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+      - name: Login to DockerHub
+        uses: docker/login-action@v3
         with:
-          java-version: 17  # Spring 3 needs at least java 17
-          distribution: temurin
-      - name: Grant execute permission for gradlew
-        run: chmod +x gradlew
-      - name: Build Docker Images
-        run: ./gradlew dockerTag -PbuildVersion=${{ github.ref_name }}
-      - name: Push Docker Images
-        run: |
-          docker login -u ${{ secrets.DOCKER_HUB_USER }} -p  ${{ secrets.DOCKER_HUB_PASSWORD }}
-          docker push inspectit/inspectit-ocelot-agent:${{ github.ref_name }}
-          docker push inspectit/inspectit-ocelot-agent:latest
-          docker push inspectit/inspectit-ocelot-configurationserver:${{ github.ref_name }}
-          docker push inspectit/inspectit-ocelot-configurationserver:latest
+          username: ${{ secrets.DOCKER_HUB_USER }}
+          password: ${{ secrets.DOCKER_HUB_PASSWORD }}
+      - name: Build and push agent
+        uses: docker/build-push-action@v6
+        with:
+          context: inspectit-ocelot-agent/docker
+          file: Dockerfile
+          push: true
+          tags: |
+            inspectit/inspectit-ocelot-agent:${{ github.ref_name }}
+            inspectit/inspectit-ocelot-agent:latest
+
+      - name: Build and push configurationserver
+        uses: docker/build-push-action@v6
+        with:
+          context: components/inspectit-ocelot-configurationserver/docker
+          file: Dockerfile
+          push: true
+          tags: |
+            inspectit/inspectit-ocelot-configurationserver:${{ github.ref_name }}
+            inspectit/inspectit-ocelot-configurationserver:latest
 
   build_documentation:
     name: "Build and Publish Release Documentation"
@@ -101,11 +113,11 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
         with:
-          # Uses Personal Access Token of Github user NTTechnicalUser.
+          # Uses Personal Access Token of GitHub user NTTechnicalUser.
           # This stores git credentials for all subsequent steps.
           # Currently, we only need it for step _Create new Documentation
           # Version_.
-          # Otherwise that step is not allowed to push to master, as it is a
+          # Otherwise, that step is not allowed to push to master, as it is a
           # protected branch.
           token: ${{ secrets.RELEASE_USER_TOKEN }}
       - name: Setup Node.js
