--- a/inspectit-ocelot-core/build.gradle
+++ b/inspectit-ocelot-core/build.gradle
@@ -6,6 +6,7 @@ plugins {
     alias(libs.plugins.orgCyclonedxBom)
     alias(libs.plugins.orgSpringframeworkBoot) apply false
     alias(libs.plugins.ioSpringDependencyManagement)
+    id 'com.gradleup.shadow' version '8.3.8'
 }
 
 publishing {
@@ -264,6 +265,31 @@ jar {
     from {
         configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
     }
+}
+
+shadowJar {
+    dependsOn compileJarCheck
+    archiveFileName = "${project.name}-shaded.jar"
+
+    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
+
+    from(generateVersionFile.versionFile)
+
+    // TODO Does not work
+    dependencies {
+        exclude("ch.qos.logback:logback-classic:1.3.15")
+        exclude("ch.qos.logback:logback-core:1.3.15")
+    }
+
+    // Relocate all dependencies
+    enableRelocation = true
+    relocationPrefix = "shadow" // default TODO: non-constant
+
+    relocate("rocks", "${relocationPrefix}.rocks")
+    relocate("io", "${relocationPrefix}.io")
+    relocate("com", "${relocationPrefix}.com")
+
+    mergeServiceFiles()
 }
 
 /**
